make call to api to create an owner, redirect user to room component

--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.8.7",
+    "axios": "^0.21.0",
     "classnames": "^2.2.6",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-transition-group": "^4.3.0",
     "yaml-loader": "^0.6.0"
   },
